# slew-model

./: .gitignore  README.md  pyproject.toml  pyproject.toml.2  pyproject.toml.ori  setup.py  setup.py.old
dst/: slew_model-1.1.1-py3-none-any.whl  slew_model-1.1.2-py3-none-any.whl
slew/: __init__.py  azel.py  fslog.py  main.py  model.py  scans.py
slew/database/: __init__.py  models.py
slew/schedule/: __init__.py  skd.py  vex.py
