[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slew-model"
description = "Compute azimuth and elevation slew rate and offset for VLBI antenna"
readme = "README.md"
version = "1.1.14"
license = {file = "GPL-3.0"}
authors = [
    { name = "Mario Berube", email = "mario.berube@nviinc.com" },
]
keywords = [
    "antenna",
    "vlbi",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "sqlalchemy",
    "astropy"
]

[project.scripts]
slew = "slew.main:main"
config = "slew.main:config"

[project.urls]
Homepage = "https://github.com/nvi-inc/slew-model.git"

#[tool.hatch.version]
#path = "slew/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "/slew",
]
